ATLAS-2041: simplify servicepoint service and controller